--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "logger-example",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run postinstall && ng serve",
     "build": "npm run postinstall && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
